syntax = "proto3";

package io.github.j5ik2o.pcqrses.command.interfaceAdapter.persistence.users;

message UserAccountName {
  string first_name = 1;
  string last_name = 2;
}
