syntax = "proto3";

package io.github.j5ik2o.pcqrses.command.interfaceAdapter.persistence.users;

// Brought in from scalapb-runtime
import "google/protobuf/timestamp.proto";
import "basic/basic.proto";

message NotCreatedSnapshot {
  string user_account_id = 1;
}

message CreatedSnapshot {
  string user_account_id = 1;
  basic.UserAccountName user_name = 2;
  string email_address = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message DeletedSnapshot {
  string user_account_id = 1;
  basic.UserAccountName user_name = 2;
  string email_address = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message UserAccountSnapshot {
  oneof state {
    NotCreatedSnapshot not_created = 1;
    CreatedSnapshot created = 2;
    DeletedSnapshot deleted = 3;
  }
}
